--- a/Code/Thanos.Sentinel/Thanos.Sentinel/Thanos.Sentinel.csproj
+++ b/Code/Thanos.Sentinel/Thanos.Sentinel/Thanos.Sentinel.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.14.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
