Resolved references in the client project
- Resolved references

--- a/Code/Thanos.Watchdog/Thanos.State/Thanos.WatchDog.State.csproj
+++ b/Code/Thanos.Watchdog/Thanos.State/Thanos.WatchDog.State.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Thanos.Common\Thanos.Models\Thanos.Models.csproj" />
     <ProjectReference Include="..\Thanos.Models\Thanos.Models.csproj" />
   </ItemGroup>
 
