--- a/Code/Thanos.Watchdog/Thanos.WatchDog.Actions/Thanos.WatchDog.Actions.csproj
+++ b/Code/Thanos.Watchdog/Thanos.WatchDog.Actions/Thanos.WatchDog.Actions.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Thanos.Common\Thanos.Adapter.ServiceBus\Thanos.Adapter.ServiceBus.csproj" />
     <ProjectReference Include="..\Thanos.Adapter.ServiceBus\Thanos.Adapter.ServiceBus.csproj" />
     <ProjectReference Include="..\Thanos.State\Thanos.WatchDog.State.csproj" />
     <ProjectReference Include="..\Thanos.WatchDog.Worker\Thanos.WatchDog.Worker.csproj" />
