--- a/Code/Thanos.Sentinel/Thanos.Sentinel/appsettings.json
+++ b/Code/Thanos.Sentinel/Thanos.Sentinel/appsettings.json
@@ -12,5 +12,6 @@
       "HueFirstBaseURL": "https://192.168.1.196/api/kT8hVdhoVZ13Tn-LT74vvCqjmtLOI-ATV-6DD87J/"
     }
   },
+  "QueueConnectionString": "Endpoint=sb://sentinel-celestial1.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=qUHteifnwdlXhBX+5sKhKVkZ1S/Zpe87dme/O7++9dM=",
   "AllowedHosts": "*"
 }
