--- a/Code/Thanos.Common/Thanos.Adapter.ServiceBus/Thanos.Adapter.ServiceBus.csproj
+++ b/Code/Thanos.Common/Thanos.Adapter.ServiceBus/Thanos.Adapter.ServiceBus.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="4.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
