--- a/Code/Thanos.Watchdog/Thanos.WatchDog/Thanos.WatchDog.csproj
+++ b/Code/Thanos.Watchdog/Thanos.WatchDog/Thanos.WatchDog.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
